# yt_ocr

./: .gitignore  CLAUDE.md  README.md  TODO.md  extracted_usernames.csv.example  extracted_usernames.txt.example  main.py  pyproject.toml
tests/: test_main.py
utils/: channel_finder.py
