[project]
name = "yt-ocr"
version = "0.1.0"
authors = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]

requires-python = ">=3.12"

dependencies = [
    "easyocr>=1.7.2",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "pytest>=8.0.0",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*pin_memory.*not supported on MPS.*:UserWarning",
]
